# rust-newsletter

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: CI.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
